        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=26681
        <rdar://problem/7003461> Problem updating applicationCache when server returns 304

        Test: http/tests/appcache/update-cache.html

        * loader/appcache/ApplicationCacheGroup.cpp: (WebCore::ApplicationCacheGroup::didReceiveResponse):
        We're already done with the resource, don't try to load it again.



Canonical link: https://commits.webkit.org/36935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45247 268f45cc-cd09-0410-ab3c-d52691b4dbfc